# eth_address_finder

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
benches/: BASELINE.md  hot_path.rs
src/: lib.rs  main.rs
src/cli/: mod.rs
src/crypto/: mod.rs
src/finder/: mod.rs
src/keystore/: mod.rs
src/models/: mod.rs
src/utils/: mod.rs
