[package]
name = "address_finder"
version = "0.1.0"
edition = "2021"
description = "A tool to generate Ethereum private keys and check their addresses for specific patterns"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
# Ethereum and cryptography
secp256k1 = { version = "0.27.0", features = ["rand"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
hex = "0.4.3"
rand = "0.8.5"
eth-keystore = "0.5.0"
uuid = "0.8"

# CLI and configuration
clap = { version = "4.4.6", features = ["derive", "env"] }
dotenv = "0.15.0"
rpassword = "7.2.0"

# Serialization and file handling
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

# Time handling
chrono = "0.4.31"

# Parallel processing
rayon = "1.8.0"
num_cpus = "1.16.0"
